Fixed command to run the game